--- a/header-panel.less
+++ b/header-panel.less
@@ -8,7 +8,7 @@
             }
             .rightOptions{
                 .settings{
-                    background: url('img/hamburger.png');
+                    background: url('../../img/hamburger.png');
                 }
             }
         }
